[package]
name = "scmp-tester"
version = "0.1.0"
edition = "2021"

[dependencies]
scion = { git = "https://github.com/MystenLabs/scion-rs.git" }
scion-proto = { git = "https://github.com/MystenLabs/scion-rs.git" }
scion-grpc = { git = "https://github.com/MystenLabs/scion-rs.git" }
bytes = "1.8.0"
etherparse = "0.16.0"
pnet = "0.35.0"
tokio = { version = "1", features = ["full"] }
tonic = "0.12.3"
clap = { version = "4.5.21", features = ["derive"]}
regex = "1.11.1"
